Slight grammar changes

--- a/paper/rldm.tex
+++ b/paper/rldm.tex
@@ -21,9 +21,9 @@ Atlanta, GA 30332 \\
 \maketitle
 
 \begin{abstract}
-  We propose a new way of teaching reinforcement learning and decision making
+   We propose a new way of teaching reinforcement learning and decision making
   that is designed be an improvement to traditional academic teaching. We use
-  a three step approach to deliver the most complete learning experience in a
+  a three-step approach to delivering a complete learning experience in a
   way that engages the student and allows them to grasp the concepts regardless
   of their skill level. We present a specific way of teaching the content, a
   new and fully configured coding platform, a set of hands-on exercises and
@@ -47,6 +47,7 @@ Atlanta, GA 30332 \\
 \startmain % to start the main 1-4 pages of the submission.
 
 \section{Introduction}
+
 Reinforcement Learning and Decision Making is a complex subject. Being the
 focus of research of a variety of fields including artificial intelligence,
 psychology, machine learning, operations research, control theory, animal
@@ -282,6 +283,5 @@ amazing field.
 ArXiv, 1606.01540, 2016.
  
 \end{thebibliography}
-
 
 \end{document}
